production build added

--- a/server/.env.production
+++ b/server/.env.production
@@ -2,6 +2,7 @@ MONGO_URI=mongodb+srv://Bharath:Bharath-admin@testing.frw4bzn.mongodb.net/moonAn
 SPOTIFY_CLIENT_ID=610a48ed94934db4938d932a5d2ca121
 SPOTIFY_CLIENT_SECRET=b07ef6f805f540cf994801f66e5a0492
 OPENAI_API_KEY=your_openai_key
-REDIRECT_URI=http://localhost:5001/callback
+REDIRECT_URI=https://mood-analyzer-mu.vercel.app/callback
 SPOTIFY_AUTH_URL=https://accounts.spotify.com/api/token
+PORT=8080
 
